syntax = "proto3";
package pb;
option go_package = "./pb";

message User {
    string id = 1;
    string name = 2;
    string email = 3;
}

message UserResultStream {
    string status = 1;
    User user = 2;
}

message Users {
    repeated User user = 1;
}

service UserService {
    rpc AddUser (User) returns (User);
    rpc AddUserVerbose (User) returns (stream UserResultStream);
    rpc AddUsers(stream User) returns (Users);
    rpc AddUserStreamBi (stream User) returns (stream UserResultStream);
}

//protoc --proto_path=proto proto/*.proto --go_out=pb 
//protoc --proto_path=proto proto/*.proto --go_out=pb --go-grpc_out=pb
//protoc --proto_path=proto/ proto/*.proto --plugin=$(go env GOPATH)/bin/protoc-gen-go-grpc --go-grpc_out=. --go_out=.